[fix] Hide chart tooltip content double scrollbar

--- a/aim/web/ui/src/components/ChartPanel/ChartPopover/ChartPopover.scss
+++ b/aim/web/ui/src/components/ChartPanel/ChartPopover/ChartPopover.scss
@@ -11,6 +11,7 @@
     box-shadow: 0px 5px 10px 0px rgb(34 58 90 / 20%);
     border: $border-main;
     backdrop-filter: blur(3px);
+    overflow: hidden;
     &__active {
       background: $white;
     }
